--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
+  firebase_core: ^2.25.4
+  firebase_database: ^10.4.5
+  flutter_rating_bar: ^4.0.1
+  syncfusion_flutter_datagrid: ^24.2.5
+  data_grid: ^0.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -61,23 +67,27 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets\images\library.jpg
-   - assets\images\lib2.jpg
-   - assets\images\AddBook.jpg
-   - assets\images\BookListView.png
-   - assets\images\BookRegistration.png
-   - assets\images\BookReview.png
-   - assets\images\ComingSoon.png
-   - assets\images\RegisterList.png
-   - assets\images\1.jpg
-   - assets\images\2.jpg
-   - assets\images\3.jpg
-   - assets\images\4.jpg
-   - assets\images\5.jpg
-   - assets\images\6.jpg
-   - assets\images\10.jpg
-   - assets\images\11.jpg
-   - assets\images\12.jpg
+   - assets\library_images\library.jpg
+   - assets\library_images\lib2.jpg
+   - assets\library_images\AddBook.jpg
+   - assets\library_images\BookListView.png
+   - assets\library_images\bookclub.png
+   - assets\library_images\BookRegistration.png
+   - assets\library_images\BookReview.png
+   - assets\library_images\ComingSoon.png
+   - assets\library_images\RegisterList.png
+   - assets\library_images\1.jpg
+   - assets\library_images\2.jpg
+   - assets\library_images\3.jpg
+   - assets\library_images\4.jpg
+   - assets\library_images\5.jpg
+   - assets\library_images\6.jpg
+   - assets\library_images\10.jpg
+   - assets\library_images\11.jpg
+   - assets\library_images\12.jpg
+   - assets\library_images\13.jpg
+   - assets\library_images\14.jpg
+   - assets\library_images\15.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
